Adds GitHub page link

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
     <div id="game">
       <div id="leia" class="box">
-        <img src="/images/leia.png" width="100" height="120" />
+        <img src="images/leia.png" width="100" height="120" />
       </div>
 
       <div id="boba" class="box">
-        <img src="/images/boba.png" width="100" height="120" />
+        <img src="images/boba.png" width="100" height="120" />
       </div>
 
       <div id="yoda" class="box">
-        <img src="/images/yoda.png" width="100" height="120" />
+        <img src="images/yoda.png" width="100" height="120" />
       </div>
     </div>
 
