Fixes for mobile sizing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8" />
-
     <title>Leia, Boba, Yoda</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -15,15 +14,15 @@
 
     <div id="game">
       <div id="leia" class="box">
-        <img src="images/leia.png" width="100" height="120" />
+        <img src="images/leia.png" />
       </div>
 
       <div id="boba" class="box">
-        <img src="images/boba.png" width="100" height="120" />
+        <img src="images/boba.png" />
       </div>
 
       <div id="yoda" class="box">
-        <img src="images/yoda.png" width="100" height="120" />
+        <img src="images/yoda.png" />
       </div>
     </div>
 
